[workspace]
members = ["hull"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["448-OG <superuser@448.africa>"]
license = "Apache-2.0 OR MIT"
description = "Solana Rust client for developer productivity both WASM and native development."
keywords = [
    "solana",
    "solana-client",
    "solana-pay",
    "token-2022",
    "token-extensions",
]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
homepage = "https://jamiidao.app"
repository = "https://github.com/JamiiDao/Hull"

[workspace.dependencies]
