[workspace]
members = ["hull", "common"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["448-OG <superuser@448.africa>"]
license = "Apache-2.0 OR MIT"
keywords = [
    "solana",
    "solana-client",
    "solana-pay",
    "token-2022",
    "token-extensions",
]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
homepage = "https://jamiidao.app"
repository = "https://github.com/JamiiDao/Hull"

[workspace.dependencies]
hull-svm-common = { path = "./common" }

pinocchio = "0.9.0"
pinocchio-pubkey = { version = "0.3.0", default-features = false }
pinocchio-token = "0.4.0"
