[package]
name = "hull-svm-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared utilities for the Hull Framework"

[features]
default = []
ordering = []
display_and_debug = []

[dependencies]
thiserror = { version = "2.0.14", default-features = false }
five8_const = "1.0.0"

[package.metadata.docs.rs]
all-features = true
