[package]
name = "solana-hull"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
