[package]
name = "hull-svm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Hull-SVM lightweight framework client"
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
